--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prepare": "cd marmot-ts && pnpm install && pnpm build"
   },
   "dependencies": {
     "@base-ui/react": "^1.1.0",
@@ -18,6 +19,7 @@
     "applesauce-accounts": "^5.1.0",
     "applesauce-actions": "^5.0.2",
     "applesauce-common": "^5.1.0",
+    "applesauce-content": "^5.0.0",
     "applesauce-core": "^5.1.0",
     "applesauce-loaders": "^5.1.0",
     "applesauce-react": "^5.1.0",
@@ -42,6 +44,7 @@
     "rxjs": "^7.8.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
+    "ts-mls": "^1.6.1",
     "tw-animate-css": "^1.4.0",
     "unique-names-generator": "^4.7.1",
     "vaul": "^1.1.2",
