--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "format": "prettier --write .",
-    "prepare": "cd marmot-ts && pnpm install && pnpm build"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@base-ui/react": "^1.1.0",
