--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
@@ -47,8 +49,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build marmot-ts
-        run: pnpm build
-        working-directory: marmot-ts
+        run: pnpm --filter marmot-ts build
 
       - name: Build
         run: pnpm build
