--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prepare": "cd marmot-ts && pnpm build"
   },
   "dependencies": {
     "@base-ui/react": "^1.1.0",
