--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,6 +50,8 @@ jobs:
 
       - name: Build
         run: pnpm build
+        env:
+          VITE_BASE_PATH: /${{ github.event.repository.name }}
 
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
